--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "demo",
+  "homepage": "https://github.com/NikitaTarasenkoTB/laptop-animation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.6.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -20,7 +23,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "~2.0.1",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
